MDEV-7015: SET STATEMENT old_passwords has no effect

Decision about algorihtm moved on prepare phase.
Made possible to add mpore password algorithms.